--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@ hello !!
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/OZpv_AcPCKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<img src="/i2024083.png">
+<img src="/i2024083.png" alt="">
