--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
 hello !!
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/OZpv_AcPCKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-<img src="/i2024083.png" alt="">
+<p>Webサイトが表示されるまでの流れ〜WebサーバDNSサーバまで〜</p>
+<img src="i2024083.png" alt="">
